# ucv-ate-si-lab03

./: .gitignore  README.md  sonar-project.properties
.github/workflows/: build.yml  sonar.yml
laboratorio3_kedro/: EVIDENCIAS.md  README.md  pyproject.toml  requirements.txt
laboratorio3_kedro/conf/base/: catalog.yml  parameters.yml
laboratorio3_kedro/data/08_reporting/: resultado_analisis.json
laboratorio3_kedro/src/laboratorio3_kedro/: __main__.py  pipeline_registry.py  settings.py
laboratorio3_kedro/src/laboratorio3_kedro/pipelines/: __init__.py
laboratorio3_kedro/src/laboratorio3_kedro/pipelines/histogram/: analyzer.py  nodes.py  pipeline.py
laboratorio3_kedro/tests/: conftest.py  test_analyzer.py
